# sqllineage

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  asset-manifest.json  editor.worker.js  editor.worker.js.map  hatch_build.py  index.html  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
.benchmarks/Windows-CPython-3.10-64bit/: 0001_9a2f33c330080a8d0a67f13d95a790bf9c6e34c6_20250225_130457.json  0001_networkx.json  0002_765bcc6291f40e359d50173d8eec8fdfe03d0a08_20250225_130740_uncommited-changes.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: heroku-deploy.yml  python-package.yml  python-publish.yml
assets/: index-DxTpg_MZ.js  index-UMD3KJFF.js
dev/: 1.py  2.py  3.py  6.py  7.py
docs/: changelog.rst  conf.py  getting_started.rst  index.rst  requirements.txt
docs/basic_concepts/: analyzer.rst  holder.rst  lineage_analyzer.rst  lineage_combiner.rst  lineage_holder.rst  lineage_model.rst  lineage_result.rst  lineage_runner.rst  metadata_provider.rst  model.rst  runner.rst
docs/behind_the_scene/: column-level_lineage_design.rst  dialect-awareness_lineage_design.rst  dos_and_donts.rst  how_sqllineage_work.rst  why_sqllineage.rst
docs/first_steps/: advanced_usage.rst  beyond_command_line.rst  getting_started.rst
docs/gear_up/: configuration.rst  metadata.rst
docs/release_note/: changelog.rst
sqllineage/: __init__.py  cli.py  combiners.py  config.py  core.py  draw.py  drawing.py  exceptions.py  helpers.py  holders.py  io.py  metadata_service.py  models.py  runner.py
sqllineage-frontend/: package-lock.json  package.json
sqllineage-frontend/src/: App.js
sqllineage/core/: __init__.py  analyzer.py  exceptions.py  graph_operator.py  holders.py  lineage_result.py  metadata_provider.py  models.py
sqllineage/core/graph/: networkx.py  rustworkx.py
sqllineage/core/handlers/: base.py  column.py  cte.py  source.py  swap_partition.py  target.py
sqllineage/core/metadata/: dummy.py  sqlalchemy.py
sqllineage/core/parser/: __init__.py
sqllineage/core/sqlfluff/: analyzer.py  models.py
sqllineage/core/sqlparse/: analyzer.py  models.py
sqllineage/data/tpcds/: query01.sql  query02.sql  query03.sql  query04.sql  query05.sql  query06.sql  query07.sql  query08.sql  query09.sql  query10.sql  query11.sql  query12.sql  query13.sql  query14.sql  query15.sql  query16.sql  query17.sql  query18.sql  query19.sql  query20.sql  query21.sql  query22.sql  query23.sql  query24.sql  query25.sql  query26.sql  query27.sql  query28.sql  query29.sql  query30.sql  query31.sql  query32.sql  query33.sql  query34.sql  query35.sql  query36.sql  query37.sql  query38.sql  query39.sql  query40.sql  (+59 more)
sqllineage/sqlfluff_core/: __init__.py  analyzer.py  holders.py  models.py
sqllineage/sqlfluff_core/handlers/: base.py  cte.py  source.py  swap_partition.py  target.py
sqllineage/sqlfluff_core/subquery/: cte_extractor.py  ddl_alter_extractor.py  ddl_drop_extractor.py  dml_insert_extractor.py  dml_select_extractor.py  lineage_holder_extractor.py  noop_extractor.py
sqllineage/sqlfluff_core/utils/: entities.py  holder.py  sqlfluff.py
sqllineage/utils/: constant.py  entities.py  helpers.py  sqlparse.py
sqllineagejs/: .eslintrc  config-overrides.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
sqllineagejs/public/: index.html  manifest.json
sqllineagejs/src/: App.js  App.jsx  config.js  index.css  index.js  main.jsx
sqllineagejs/src/api/: client.js
sqllineagejs/src/app/: store.js
static/css/: main.10278381.css  main.10278381.css.map  main.a71c6c1d.css  main.a71c6c1d.css.map  main.b4b72bcf.css  main.b4b72bcf.css.map  main.c1b86fee.css  main.c1b86fee.css.map  main.dc83f471.css  main.dc83f471.css.map  main.ec75651b.css  main.ec75651b.css.map
static/js/: 333.97bcedbd.chunk.js  333.97bcedbd.chunk.js.map  main.0a485929.js  main.0b5f2539.js  main.0b5f2539.js.LICENSE.txt  main.173686bc.js  main.2b88886c.js  main.62647d47.js  main.863c19ce.js  main.8cae2d58.js  main.9c4de2e1.js  main.a0040ca3.js  main.b60be30e.js  main.cb944872.js
tests/: __init__.py  conftest.py  helpers.py  test_basic.py  test_cli.py  test_columns.py  test_columns_dialect_specific.py  test_combiner.py  test_config.py  test_core.py  test_create.py  test_cte.py  test_cte_dialect_specific.py  test_drawing.py  test_exception.py  test_flask.py  test_insert.py  test_insert_dialect_specific.py  test_models.py  test_others.py  test_others_dialect_specific.py  test_parser.py  test_path.py  test_path_dialect_specific.py  test_runner.py  test_select.py  test_select_dialect_specific.py  test_sqlfluff.py
tests/core/: test_cli.py  test_config.py  test_drawing.py  test_exception.py  test_graph_operator.py  test_holder.py  test_metadata_provider.py  test_parser.py  test_runner.py
tests/sql/column/: test_column_cross_stmts_with_similar_subquery_alias.py  test_column_merge.py  test_column_metadata.py  test_column_procedure_dialect_specific.py  test_column_select_case_when.py  test_column_select_cast.py  test_column_select_column.py  test_column_select_column_dialect_specific.py  test_column_select_column_specified_in_dml.py  test_column_select_column_specified_in_dml_dialect_specific.py  test_column_select_expression.py  test_column_select_from_cte.py  test_column_select_from_join.py  test_column_select_from_subquery.py  test_column_select_function.py  test_column_select_lateral_alias_ref.py  test_column_select_union.py  test_column_select_wildcard.py  test_column_subquery_within_set.py  test_column_update.py  test_consistency.py  test_metadata_target_column.py  test_metadata_unqualified_column.py  test_metadata_wildcard.py
tests/sql/sqlfluff_only/: __init__.py  test_dialect_specific.py  test_dml_specify_column.py  test_keyword_as_identifier.py  test_parenthesized_expression.py  test_parenthesized_query.py  test_tsql_no_semicolon.py
(+118 files in other folders)
